subo movimiento inercial de la regla pero con errores de navegación aún

--- a/1 Desarrollo/index.html
+++ b/1 Desarrollo/index.html
@@ -10,7 +10,7 @@
 		<script type="text/javascript" src="scripts/jquery-1.7.1.min.js"></script>
 		<script type="text/javascript" src="scripts/jquery-ui-1.10.4.custom.js"></script> 
 		<script type="text/javascript" src="scripts/jquery.mousewheel.min.js"></script>
-		<script type="text/javascript" src="scripts/jquery.overscroll.min.js"></script>
+		<script type="text/javascript" src="scripts/jquery.overscroll.js"></script>
 		<script type="text/javascript" src="scripts/jquery.linq.min.js"></script>
 		
 		<script type="text/javascript" src="scripts/util.date.js"></script>
