modifico valor de codificación

--- a/1 Desarrollo/index.html
+++ b/1 Desarrollo/index.html
@@ -1,7 +1,7 @@
 <html>
 
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=ASCII" />
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<link rel="stylesheet" type="text/css" href="styles/style.css">
         <link rel="stylesheet" type="text/css" href="styles/jquery-ui-1.10.4.custom.css">
 
