Arreglo problemitas con los métodos abreviados de teclado.

--- a/dev/index.html
+++ b/dev/index.html
@@ -64,13 +64,13 @@
     <div id="accesibilidad">
         <div id="accesibilidad-content">
             <ul>
-                <li>B/F3 Buscar</li>
+                <li>F3 Buscar</li>
                 <li>esc Cancelar</li>
                 <li>+ Nuevo</li>
                 <li>&#8594; Avanzar</li>
                 <li>&#8592; Retroceder</li>
                 <li>&#8597; Zoom</li>
-                <li>a/h Ayuda</li>
+                <li>F1 Ayuda</li>
             </ul>
         </div>
         <div id="accesibilidad-icon"><img src="images/accesibilidad.png" width="32" /></div>
