Subo modificaciones, dejo solamente la introducción con el logo mas chico

--- a/dev/index.html
+++ b/dev/index.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -7,16 +7,14 @@
 </head>
 
 <body>
-<!-- Aca estan tanto el div de la intro como el div del fondo interactivo, ambos tienen dentro sus respectivas imagenes#-->
+<!-- Aca estan tanto el div de la intro con su respectiva imagen#-->
 <div id="intro">
 <img src="images/fondoMemo.jpg" alt="" >
 <div id="logo">
 <img src="images/logo.png" alt="" >
 </div>
 </div>
-<div id="fondoInteractivo">
-<img src="images/fondo.png" alt="" >
-</div>
+
     <div id="navegador">
         <input id="FechaNavegar" type="text" maxlength="10" onKeyPress="validarEnter(event)" title="Formato: DD/MM/AAAA ó AAAA" />
         <a id="botonBuscar" href="javascript:Regla.navegar()"><img src="images/iconos/ir-a.png" title="Ir a..."></a>
