quito el botón de cargar

--- a/dev/index.html
+++ b/dev/index.html
@@ -20,7 +20,7 @@
         <a id="botonBuscar" href="javascript:Regla.navegar()"><img src="images/iconos/ir-a.png" title="Ir a..." class="buscar"></a>
     </div>
 
-    <div id="cargarEvento">
+    <div id="cargarEvento" style="display: none">
         <a id="botonCargar" href="javascript:Eventos.cargar()">
             <img title="cargar..." src="images/iconos/subir.png" class="subir" /></a>
     </div>
