Subo reestructuración de estilos y html para la interfaz nueva de memoria

--- a/dev/index.html
+++ b/dev/index.html
@@ -7,13 +7,13 @@
 </head>
 
 <body>
-<!-- Aca estan tanto el div de la intro con su respectiva imagen
+<!-- Aca estan tanto el div de la intro con su respectiva imagen#-->
 <div id="intro">
 <img src="images/fondoMemo.jpg" alt="" >
 <div id="logo">
 <img src="images/logo.png" alt="" >
 </div>
-</div>#-->
+</div>
 <div id="encabezado">
 
 
