--- a/dev/index.html
+++ b/dev/index.html
@@ -15,24 +15,16 @@
 </div>
 </div>
 <div id="encabezado">
-
-
-<img src="images/logoEncabezado.png">  
-
-
-<div class="subir" id="navegador">
-        <input id="FechaNavegar" type="text" maxlength="10" onKeyPress="validarEnter(event)" title="Formato: DD/MM/AAAA ó AAAA" />
-        <a id="botonBuscar" href="javascript:Regla.navegar()"><img src="images/iconos/ir-a.png" title="Ir a..." class="buscar"></a>
-    </div>
-    
-<div id="timeline-comandos">
-        <a href="javascript:Regla.scrollRetroceder()"><img src="images/iconos/retroceder.png" title="Retroceder" class="retroceder"></a>
-        <a href="javascript:Regla.zoomAcercar()"><img src="images/iconos/zoom-acercar.png" title="Acercar" class="acercar"></a>
-        <a href="javascript:Regla.zoomAlejar()"><img src="images/iconos/zoom-alejar.png" title="Alejar" class="alejar"></a>
-        <a href="javascript:Regla.scrollAvanzar()"><img src="images/iconos/avanzar.png" title="Avanzar" class="avanzar"></a>
+    <div class="brand">
+        <img src="images/logoEncabezado.png" style="width: 93px;">
+        MEMORIA
     </div>
     <div id="filtros">
         <a href="#"><img src="images/iconos/filtros.png" title="Filtros" class="filtro"></a>
+    </div>
+    <div class="subir" id="navegador">
+        <input id="FechaNavegar" type="text" maxlength="10" onKeyPress="validarEnter(event)" title="Formato: DD/MM/AAAA ó AAAA" />
+        <a id="botonBuscar" href="javascript:Regla.navegar()"><img src="images/iconos/ir-a.png" title="Ir a..." class="buscar"></a>
     </div>
 </div>
 
@@ -74,6 +66,13 @@
         <p class="botones"><button id="btnGenerarLineas" type="button">Generar</button></p>
     </div>
 
+    <div id="timeline-comandos">
+        <a href="javascript:Regla.scrollRetroceder()"><img src="images/iconos/retroceder.png" title="Retroceder" class="retroceder"></a>
+        <a href="javascript:Regla.zoomAcercar()"><img src="images/iconos/zoom-acercar.png" title="Acercar" class="acercar"></a>
+        <a href="javascript:Regla.zoomAlejar()"><img src="images/iconos/zoom-alejar.png" title="Alejar" class="alejar"></a>
+        <a href="javascript:Regla.scrollAvanzar()"><img src="images/iconos/avanzar.png" title="Avanzar" class="avanzar"></a>
+    </div>
+
     <div id="timeline-scroll">
         <div id="timeline-contenedor">
             <div id="timeline-regla"></div>
@@ -98,6 +97,7 @@
     <script src="//code.jquery.com/jquery-latest.js"></script>
     <script>window.jQuery || document.write('<script src="scripts/jquery/jquery-1.7.1.min.js"><\/script>')</script>
     <script type="text/javascript" src="scripts/jquery/jquery-ui-1.10.4.custom.js"></script>
+    <script type="text/javascript" src="scripts/jquery/jquery-dialog-override.js"></script>
     <script type="text/javascript" src="scripts/jquery/jquery.mousewheel.min.js"></script>
     <script type="text/javascript" src="scripts/jquery/jquery.linq.min.js"></script>
 
@@ -126,8 +126,10 @@
     top: ($(window).height() - $("#intro").outerHeight())/2
   });
   		//luego aparece el logo de memoria con fadeIn, espera 4s y desaparece con fadeOut, luego continua con su ejecucion normal
-       	 	$( "#logo" ).fadeIn(2000);
-        		 $( "#intro" ).delay( 4000 ).fadeOut(2000);
+       	    //$( "#logo" ).fadeIn(2000);
+            //$( "#intro" ).delay( 4000 ).fadeOut(2000);
+            $('#logo').hide();
+            $('#intro').hide();
             Linea.init();
             Filtros.init();
         });
