Soluciono la llamada al /data haciéndola sólo 1 vez

--- a/src/index.html
+++ b/src/index.html
@@ -127,41 +127,9 @@
   		//luego aparece el logo de memoria con fadeIn, espera 4s y desaparece con fadeOut, luego continua con su ejecucion normal
         $( "#logo" ).fadeIn(2000);
         $( "#intro" ).delay( 4000 ).fadeOut(2000);
-		Linea.init();
+		Eventos.cargarDatos()
 		Filtros.init();
         });
     </script>
- <script>
-
-jQuery.fn.filterByText = function(textbox) {
-    return this.each(function() {
-        var select = this;
-        var options = [];
-        $(select).find('option').each(function() {
-            options.push({value: $(this).val(), text: $(this).text()});
-        });
-        $(select).data('options', options);
-
-        $(textbox).bind('change keyup', function() {
-            var options = $(select).empty().data('options');
-            var search = $.trim($(this).val());
-            var regex = new RegExp(search,"gi");
-
-            $.each(options, function(i) {
-                var option = options[i];
-                if(option.text.match(regex) !== null) {
-                    $(select).append(
-                        $('<option>').text(option.text).val(option.value)
-                    );
-                }
-            });
-        });
-    });
-};
-
-$(function() {
-    $('#filtroCategorias').filterByText($('#filterCat'));
-});
-</script>
 </body>
 </html>
