subo librearias de bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <link rel="stylesheet" type="text/css" href="styles/jquery-ui-1.10.4.custom.css">
+	<link rel="stylesheet" type="text/css" href="styles/bootstrap_css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="styles/bootstrap_css/bootstrap.min.css">
 </head>
 
 <body>
@@ -108,6 +110,8 @@
     <script type="text/javascript" src="scripts/timeline.eventos.js"></script>
     <script type="text/javascript" src="scripts/timeline.regla.js"></script>
     <script type="text/javascript" src="scripts/timeline.linea.js"></script>
+	<script type="text/javascript" src="scripts/bootstrap/bootstrap.min.js"></script>
+	<script type="text/javascript" src="scripts/bootstrap/bootstrap.js"></script>
     <script src="scripts/timeline.accesibilidad.js"></script>
 
     <script type="text/javascript">
