Subo cambio en index

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <link rel="stylesheet" type="text/css" href="styles/jquery-ui-1.10.4.custom.css">
-	<link rel="stylesheet" type="text/css" href="styles/bootstrap_css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="styles/bootstrap_css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="styles/bootstrap_css/bootstrap-theme.min.css">
 </head>
 
 <body>
@@ -64,7 +63,7 @@
 
 
         <div id="timeline-filtros"></div>
-        <p class="botones"><button id="btnGenerarLineas" type="button">Generar</button></p>
+        <p class="botones"><button id="btnGenerarLineas" type="submit">Generar</button></p>
     </div>
 
     <div id="timeline-comandos">
