Subo algunos cambios  usando css de bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="styles/style.css">
+	<link rel="stylesheet" type="text/css" href="styles/jquery-ui-1.10.4.custom.css">
 	<link rel="stylesheet" type="text/css" href="styles/bootstrap_css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styles/bootstrap_css/bootstrap-theme.min.css">
 </head>
@@ -56,14 +57,14 @@
                 <td><select id="filtroPaises" multiple="multiple" size="5"></select></td>
             </tr>
         </table>
-        <p class="botones"><button type="button" id="btnAgregarFiltro">Agregar</button></p>
+        <p class="botones"><button type="button" class="btn btn-success btn-lg btn-block" id="btnAgregarFiltro">Agregar</button></p>
 
         <h3>Vista previa</h3>
 
 
 
         <div id="timeline-filtros"></div>
-        <p class="botones"><button id="btnGenerarLineas" type="submit">Generar</button></p>
+        <p class="botones"><button id="btnGenerarLineas" class="btn btn-default" type="submit">Generar</button></p>
     </div>
 
     <div id="timeline-comandos">
