--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,11 @@
         <img src="images/logoEncabezado.png" style="width: 93px;">
     </div>
     <div id="filtros">
-        <a href="#"><img src="images/iconos/filtros.png" title="Filtros" class="filtro"></a>
+        <a href="#"><img src="images/iconos/filtros.png" class="filtro"></a>
     </div>
     <div class="subir" id="navegador">
-        <input id="FechaNavegar" type="text" maxlength="10" onKeyPress="validarEnter(event)" title="Formato: DD/MM/AAAA ó AAAA" />
-        <a id="botonBuscar" href="javascript:Regla.navegar()"><img src="images/iconos/ir-a.png" title="Ir a..." class="buscar"></a>
+        <input class="fechaNavegar" id="FechaNavegar" type="text" maxlength="10" onKeyPress="validarEnter(event)"/>
+        <a class="btnBuscar" id="botonBuscar" href="javascript:Regla.navegar()"><img src="images/iconos/ir-a.png" class="buscar"></a>
     </div>
 </div>
 
@@ -68,10 +68,10 @@
     </div>
 
     <div id="timeline-comandos">
-        <a href="javascript:Regla.scrollRetroceder()"><img src="images/iconos/retroceder.png" title="Retroceder" class="retroceder"></a>
-        <a href="javascript:Regla.zoomAcercar()"><img src="images/iconos/zoom-acercar.png" title="Acercar" class="acercar"></a>
-        <a href="javascript:Regla.zoomAlejar()"><img src="images/iconos/zoom-alejar.png" title="Alejar" class="alejar"></a>
-        <a href="javascript:Regla.scrollAvanzar()"><img src="images/iconos/avanzar.png" title="Avanzar" class="avanzar"></a>
+        <a href="javascript:Regla.scrollRetroceder()"><img src="images/iconos/retroceder.png" class="retroceder"></a>
+        <a href="javascript:Regla.zoomAcercar()"><img src="images/iconos/zoom-acercar.png" class="acercar"></a>
+        <a href="javascript:Regla.zoomAlejar()"><img src="images/iconos/zoom-alejar.png" class="alejar"></a>
+        <a href="javascript:Regla.scrollAvanzar()"><img src="images/iconos/avanzar.png" class="avanzar"></a>
     </div>
 
     <div id="timeline-scroll">
@@ -119,9 +119,42 @@
             enter = (document.FechaNavegar) ? e.keyCode : e.which;
             if (enter==13) Regla.navegar();
         }
+		$(document).ready(function(){
+		$(".buscar").tooltip({
+			placement : 'right',
+			title : 'Ir a...'
+			});
+		$(".fechaNavegar").tooltip({
+			placement : 'bottom',
+			title : 'Formato: DD/MM/AAAA ó AAAA'
+			});
+
+		$(".filtro").tooltip({
+			placement : 'bottom',
+			title : 'Filtros'
+			});
+		$(".retroceder").tooltip({
+			placement : 'left',
+			title : 'Retroceder'
+			});
+		$(".avanzar").tooltip({
+			placement : 'right',
+			title : 'Avanzar'
+			});
+		$(".acercar").tooltip({
+			placement : 'top',
+			title : 'Acercar'
+			});
+		$(".alejar").tooltip({
+			placement : 'top',
+			title : 'Alejar'
+			});
+			
+		});
     </script>
 
-    <script type="text/javascript">
+   
+   <script type="text/javascript">
         $(document).ready(function () {
 		//activa la introducción y centra la introduccion para cualquier tamaño de ventana
 		$("#intro").css({    
@@ -135,5 +168,6 @@
 		Filtros.init();
         });
     </script>
+	
 </body>
 </html>
