Subo libreria Bootbox que permite un facil manejo de los dialogos en boostrap y un ejemplo de uso de la misma

--- a/src/index.html
+++ b/src/index.html
@@ -112,6 +112,8 @@
     <script type="text/javascript" src="scripts/timeline.linea.js"></script>
 	<script type="text/javascript" src="scripts/bootstrap/bootstrap.min.js"></script>
 	<script type="text/javascript" src="scripts/bootstrap/bootstrap.js"></script>
+	<script type="text/javascript" src="scripts/bootstrap/bootbox.min.js"></script>
+	
     <script src="scripts/timeline.accesibilidad.js"></script>
 
     <script type="text/javascript">
