--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-ï»¿<html>
+<html>
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -22,7 +22,7 @@
         <a href="#"><img src="images/iconos/filtros.png" title="Filtros" class="filtro"></a>
     </div>
     <div class="subir" id="navegador">
-        <input id="FechaNavegar" type="text" maxlength="10" onKeyPress="validarEnter(event)" title="Formato: DD/MM/AAAA Ã³ AAAA" />
+        <input id="FechaNavegar" type="text" maxlength="10" onKeyPress="validarEnter(event)" title="Formato: DD/MM/AAAA ó AAAA" />
         <a id="botonBuscar" href="javascript:Regla.navegar()"><img src="images/iconos/ir-a.png" title="Ir a..." class="buscar"></a>
     </div>
 </div>
@@ -36,7 +36,7 @@
 
 
     
-<!--se eliminÃ³ el href de este div que llamaba al metodo Filtro.init() y se lo remplazo por #-->
+<!--se eliminó el href de este div que llamaba al metodo Filtro.init() y se lo remplazo por #-->
     
 
     <div id="filtros-panel" style='display: none;'>
@@ -119,7 +119,7 @@
 
     <script type="text/javascript">
         $(document).ready(function () {
-		//activa la introducciÃ³n y centra la introduccion para cualquier tamaÃ±o de ventana
+		//activa la introducción y centra la introduccion para cualquier tamaño de ventana
 		$("#intro").css({    
 			left: ($(window).width() - $("#intro").outerWidth())/2,
 			top: ($(window).height() - $("#intro").outerHeight())/2
